@@ -28,11 +28,9 @@
   "MANAGE_WEBHOOKS": "Gerenciar Webhooks",
   "MANAGE_EMOJIS": "Gerenciar Emojis",
   "ONLY_DEVS": "Este comando é de uso esclusivo da minha dona >...<",
-  "SLASH_COMMAND": "Este comando já está disponível em slash!",
   "UNKNOWN_SLASH": "> Este comando não existe!",
   "USER_MISSING_PERMISSION": "Você não tem a permissão de `{{perm}}` para poder executar este comando.",
   "CLIENT_MISSING_PERMISSION": "Eu não tenho permissão de `{{perm}}` para poder executar este comando.",
   "BANNED_INFO": "Você está banido de utilizar a Menhera!\n\nMotivo: `{{banReason}}`",
-  "DISABLED_COMMAND": "Este comando está desabilitado neste servidor! Use `/blockcommand {{cmd}}` para reabilitá-lo",
   "IN_COMMAND_EXECUTION": "Você não pode utilizar este comando pois está no meio de outro! Termine a execução daquele comando e tente novamente\n\n**ACHA QUE É UM BUG?** Venha ao servidor de suporte da Menhera `/suporte` e peça ajuda"
 }
